# oz-main_project-be

./: .dockerignore  .gitignore  .gitmessage.txt  .gitmodules  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml  test.sh  test_chat_locust.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-cicd.yml
apps/account/: admin.py  models.py  views.py
apps/category/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/chat/templates/: chat_test.html
apps/common/: utils.py
apps/core/management/commands/: create_chat_locust_data.py
apps/like/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/mypage/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/notification/: admin.py  consumers.py  models.py  routing.py  serializers.py  tests.py  utils.py  views.py
apps/product/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/user/: adapters.py  admin.py  api_schema.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/user/templates/account/email/: confirm-success.html  email_confirmation_signup_message.html  email_confirmation_subject.txt  email_verification_message.html
apps/user/templates/user/email/: confirm-fail.html  email_confirmation_message.html
apps/user/templatetags/: user.py
caddy/: Caddyfile
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py  settings.py
diagrams/: like_diagram.md
nginx/: Dockerfile  default.conf  nginx-ws.conf  nginx.conf  nginx1.conf  nginx_ws.conf
templates/account/email/: email_confirmation_signup_message.html  email_confirmation_subject.txt
tools/: create_superuser.py  gunicorn_local.conf.py  gunicorn_prod.conf.py  locust_product.py  secrets.py  test_chat_locust.py
